--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="{{ "assets/css/agency.min.css" | prepend: site.baseurl }}">
+    <link href="{{ assets_path }}css/agency.min.css" rel="stylesheet">
 
   </head>
 
